feat: Validating entity type